[project]
name = "dab-smote"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pdoc3>=0.11.6",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "scikit-learn>=1.7.2",
    "statds>=1.1.7",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = []

[tool.coverage.run]
omit = [
    "classes/dataset.py",
    "__init__.py"
]